--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -47,5 +47,10 @@
 	<true/>
 	<key>UIApplicationSupportsIndirectInputEvents</key>
 	<true/>
+	<key>NSCameraUsageDescription</key>
+    <string>Your own description</string>
+
+    <key>NSMicrophoneUsageDescription</key>
+    <string>To enable microphone access when recording video</string>
 </dict>
 </plist>
