--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -71,6 +71,7 @@ dependencies:
   flutter_svg: ^1.1.6
   image_picker: ^0.8.5+3
   flutter_screenutil: ^5.6.0
+  flutter_local_notifications: ^12.0.4
 
 
 
