--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -72,6 +72,7 @@ dependencies:
   image_picker: ^0.8.5+3
   flutter_screenutil: ^5.6.0
   flutter_local_notifications: ^12.0.4
+  intl: ^0.17.0
 
 
 
