--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -73,6 +73,7 @@ dependencies:
   flutter_screenutil: ^5.6.0
   flutter_local_notifications: ^12.0.4
   intl: ^0.17.0
+  pull_to_refresh: ^2.0.0
 
 
 
