notification from karim

--- a/android/key.properties
+++ b/android/key.properties
@@ -1,4 +1,5 @@
 storePassword=11111111
 keyPassword=11111111
 keyAlias=upload
-storeFile=/media/kerolos/7C6ADEC06ADE75FC/flutter/Self Radar/android/key.jks
+storeFile=E:/flutter_projects/selfe_radar/android/key.jks
+
