--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -74,6 +74,9 @@ dependencies:
   flutter_local_notifications: ^12.0.4
   intl: ^0.17.0
   pull_to_refresh: ^2.0.0
+  double_back_to_close_app: ^2.1.0
+  geocode: ^1.0.2
+  flutter_countdown_timer: ^4.1.0
 
 
 
