--- a/android/key.properties
+++ b/android/key.properties
@@ -1,5 +1,5 @@
 storePassword=11111111
 keyPassword=11111111
 keyAlias=upload
-storeFile=E:/flutter_projects/selfe_radar/android/key.jks
+storeFile=E:/work/flutter/Self Radar/android/key.jks
 
